--- a/templates/upload.html
+++ b/templates/upload.html
@@ -105,8 +105,8 @@
 </head>
 <body>
     <h1>File Conversion</h1>
-    <form id="conversionForm" method="post" enctype="multipart/form-data">
-        <label for="conversion">Select conversion type:</label>
+<form id="conversionForm" method="post" enctype="multipart/form-data" action="https://file-converter-e54a.onrender.com/">
+    <label for="conversion">Select conversion type:</label>
         <select name="conversion" id="conversion">
             <option value="jpg_to_pdf">JPG to PDF</option>
             <option value="pdf_to_word">PDF to Word</option>
